refactor cancel-order-by-buyer api
