# docs/swagger.json
@@ -728,7 +728,7 @@
                         "accessToken": []
                     }
                 ],
-                "description": "Cancel an order by the buyer",
+                "description": "Allows the buyer to cancel a regular order that is only in pending.",
                 "consumes": [
                     "application/json"
                 ],
@@ -749,12 +749,12 @@
                         "required": true
                     },
                     {
-                        "description": "Cancellation reason",
+                        "description": "Cancel order request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.cancelOrderByBuyerRequest"
+                            "$ref": "#/definitions/api.cancelOrderRequest"
                         }
                     }
                 ],
@@ -2860,24 +2860,13 @@
                 }
             }
         },
-        "api.cancelOrderByBuyerRequest": {
-            "type": "object",
-            "required": [
-                "canceled_reason"
-            ],
-            "properties": {
-                "canceled_reason": {
-                    "type": "string"
-                }
-            }
-        },
         "api.cancelOrderRequest": {
             "type": "object",
             "required": [
-                "canceled_reason"
+                "reason"
             ],
             "properties": {
-                "canceled_reason": {
+                "reason": {
                     "type": "string"
                 }
             }
